k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: devtask
  labels:
    app: backend
    tier: api
    project: devtask-kanban
    owner: ganeshwalunj
    purpose: fullstack-devops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      imagePullSecrets:
        - name: gitlab-registry-secret
      containers:
        - name: backend
          image: registry.gitlab.com/ganeshwalunj/devtask/backend:965da0d8
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
